@@ -11,6 +11,10 @@
       caught in route code.
       (Damien Krotkine)
 
+    [ ENHANCEMENTS ]
+    * Added 'strict_config' option to have the config return an object instead
+      of a hashref. (Ovid)
+
 1.3093      29.02.2012
 
     [ BUG FIXES ]
